--- a/src/components/containers/BodyWrapper/BodyWrapper.module.scss
+++ b/src/components/containers/BodyWrapper/BodyWrapper.module.scss
@@ -5,6 +5,6 @@
   gap: 30px;
   width: 100%;
   min-height: 100vh;
-  padding: 25px 20px;
+  padding: 20px 20px 25px 20px;
   background: color.$background-main-light;
 }
