--- a/src/styles/main/main.scss
+++ b/src/styles/main/main.scss
@@ -1,4 +1,9 @@
 @use '../reset/reset' as *;
+@use '../base/colors/colors' as color;
+
+body {
+  background: color.$background-main-light;
+}
 
 .main {
   width: 100%;
