--- a/src/components/containers/BodyWrapper/BodyWrapper.module.scss
+++ b/src/components/containers/BodyWrapper/BodyWrapper.module.scss
@@ -1,9 +1,11 @@
+@use '../../../styles/abstracts/mixins' as *;
 @use '../../../styles/base/colors/colors' as color;
 
 .bodyWrapper {
   display: flex;
   gap: 30px;
   width: 100%;
+  @include BoundingBox;
   min-height: 100vh;
   padding: 20px 20px 25px 20px;
   background: color.$background-main-light;
