--- a/src/styles/base/globals/_globals.scss
+++ b/src/styles/base/globals/_globals.scss
@@ -5,6 +5,7 @@ $font-size-md: 14px;
 $font-size-lg: 16px;
 $font-size-xl: 18px;
 $font-size-xxl: 20px;
+$font-size-2xl: 22px;
 $font-size-xxxl: 24px;
 $font-size-4xl: 32px;
 $font-size-5xl: 40px;
