Added many components, fixed dependecies bugs

--- a/src/styles/base/colors/_colors.scss
+++ b/src/styles/base/colors/_colors.scss
@@ -3,6 +3,8 @@ $color-gray-neutral: #7d8592;
 $shadow-box-light: 0 6px 58px 0 rgba(196, 203, 214, 0.1);
 $background-main-light: #f4f9fd;
 $background-support-primary: #3f8cff;
+$background-support-hover: #3a81eb;
+$background-support-active: #1f6de0;
 $shadow-box-support: 0 6px 12px 0 rgba(63, 140, 255, 0.26);
 $color-black-deep: #0a1629;
 $color-gray-light: #e6edf5;
