--- a/src/styles/abstracts/mixins/_mixins.scss
+++ b/src/styles/abstracts/mixins/_mixins.scss
@@ -30,6 +30,15 @@
   color: color.$color-white-primary;
   border-radius: 14px;
   font-weight: 700;
+
+  transition: background 0.5s ease-in-out 0s;
+  &:hover {
+    background: color.$background-support-hover;
+  }
+
+  &:active {
+    background: color.$background-support-active;
+  }
 }
 
 @mixin menuButton {
@@ -50,8 +59,7 @@
   min-height: $min-height;
 }
 
-
-@mixin whiteContainer($max-width: $max-width, ) {
+@mixin whiteContainer($max-width: $max-width) {
   width: 100%;
   height: 100%;
   max-width: $max-width;
@@ -70,7 +78,6 @@
   font-weight: 700;
 }
 
-
 @mixin viewLink {
   display: flex;
   align-items: center;
@@ -78,5 +85,38 @@
   font-size: size.$font-size-lg;
   color: color.$background-support-primary;
   font-weight: 600;
+  position: relative;
+
+  transition: color 0.5s ease-in-out 0s;
+  &:hover {
+    color: color.$background-support-hover;
+  }
+
+  &:active {
+    color: color.$background-support-active;
+  }
+  &::before {
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    width: 0;
+    height: 2px;
+    background: color.$background-support-primary;
+    border-radius: 1px;
+    transition: width 0.5s ease-in-out;
+  }
+
+  &:hover::before {
+    width: 76px;
+  }
 }
 
+@mixin closeButton {
+  width: 44px;
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 14px;
+  background: color.$background-main-light;
+}
