--- a/src/components/home/HomeModal/HomeModal.module.scss
+++ b/src/components/home/HomeModal/HomeModal.module.scss
@@ -1,6 +1,7 @@
 @use '../../../styles/abstracts/mixins/mixins' as *;
 @use '../../../styles/base/colors/colors' as color;
 @use '../../../styles/base/globals/globals' as size;
+@use '../../../styles/abstracts/breakpoints/breakpoints' as *;
 
 .modal {
   width: 100%;
@@ -14,22 +15,39 @@
   align-items: center;
   padding-top: 67px;
   padding-bottom: 107px;
+  z-index: 100;
 
   &Container {
     @include whiteContainer(100%);
     max-width: 584px;
     margin-top: auto;
+    max-height: 824px;
     margin-bottom: auto;
-    padding: 30px;
-    padding-inline-start: 60px;
+    padding: 30px 60px;
     box-sizing: border-box;
+    overflow: auto;
+
+    &::-webkit-scrollbar {
+      width: 3.5px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: color.$color-loader-primary;
+      opacity: 0.5;
+      border-radius: 24px;
+      margin-block: 20px;
+    }
+
+    &::-webkit-scrollbar-track {
+      margin-block: 20px;
+    }
   }
 
   &Header {
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
-    min-height: 59px;
+    height: 59px;
     position: relative;
   }
 
@@ -41,7 +59,12 @@
     @include closeButton;
     position: absolute;
     top: 0;
-    right: 0;
+    right: -30px;
+    transition: 0.3s ease-in-out 0s;
+
+    &:hover {
+      background: color.$color-gray-light;
+    }
   }
 
   &CloseIcon {
@@ -62,5 +85,44 @@
     width: 100%;
     max-width: 435px;
     margin-top: 30px;
+  }
+
+  &Textarea {
+    width: 100%;
+    border: 2.5px solid color.$background-modal-light;
+    box-shadow: color.$shadow-modal;
+    background: color.$color-white-primary;
+    border-radius: 14px;
+    min-height: 120px;
+    padding: 11px;
+    color: color.$color-gray-neutral;
+    caret-color: color.$color-gray-neutral;
+    resize: none;
+    @include inputHover;
+    &::placeholder {
+      @include selectLabel;
+      font-weight: 400;
+    }
+  }
+
+  &TextareaLabel {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 7px;
+    margin-block-start: 40px;
+    @include selectLabel;
+  }
+
+  &SendButton {
+    @include Button;
+    position: static;
+    margin-block-start: 51px;
+    margin-left: auto;
+  }
+}
+
+@include respond-toHeight(height-medium) {
+  .modal {
+    padding: 40px;
   }
 }
