--- a/src/styles/main/main.scss
+++ b/src/styles/main/main.scss
@@ -3,6 +3,19 @@
 
 body {
   background: color.$background-main-light;
+  &::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: color.$color-loader-primary;
+    border-radius: 24px;
+    margin-block: 10px;
+  }
+
+  &::-webkit-scrollbar-track {
+    margin-block: 10px;
+  }
 }
 
 .main {
