--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -42,7 +42,17 @@
     }
   }
 
+  &ButtonsContainer {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+  }
+
   &Notification {
+    @include menuButton;
+  }
+
+  &SignInButton {
     @include menuButton;
   }
 }
