--- a/src/styles/base/globals/_globals.scss
+++ b/src/styles/base/globals/_globals.scss
@@ -7,6 +7,7 @@ $font-size-xl: 18px;
 $font-size-xxl: 20px;
 $font-size-2xl: 22px;
 $font-size-xxxl: 24px;
+$font-size-3xl: 30px;
 $font-size-4xl: 32px;
 $font-size-5xl: 40px;
 $font-size-6xl: 48px;
