--- a/src/styles/base/globals/_globals.scss
+++ b/src/styles/base/globals/_globals.scss
@@ -9,6 +9,7 @@ $font-size-2xl: 22px;
 $font-size-xxxl: 24px;
 $font-size-3xl: 30px;
 $font-size-4xl: 32px;
+$font-size-4xxl: 36px;
 $font-size-5xl: 40px;
 $font-size-6xl: 48px;
 $font-size-7xl: 56px;
