Typified auth components

--- a/src/components/auth/MultiStepsSignUpEntering/MultiStepsSignUpEntering.module.scss
+++ b/src/components/auth/MultiStepsSignUpEntering/MultiStepsSignUpEntering.module.scss
@@ -149,8 +149,11 @@
   & .multiMessageConfirmationButton {
     @include confirmationButton;
     @include selectLabel;
-    font-weight: 400;
+    font-weight: 700;
+    font-size: size.$font-size-lg;
     text-align: center;
+    @include inputHover;
+    border-width: 2px;
   }
 
   & .phoneInputContainer {
