Refactored SignUp Steps page [components]

--- a/src/components/auth/MultiStepsSignUpEntering/MultiStepsSignUpEntering.module.scss
+++ b/src/components/auth/MultiStepsSignUpEntering/MultiStepsSignUpEntering.module.scss
@@ -46,6 +46,7 @@
   & .signInFormBlockInput {
     @include input;
     @include inputHover;
+    font-weight: 500;
   }
 
   & .signInFormBlockPhoneInputContainer {
