Started creating MultiStepNext reg component, and typified api calls and other

--- a/src/styles/abstracts/mixins/_mixins.scss
+++ b/src/styles/abstracts/mixins/_mixins.scss
@@ -45,6 +45,7 @@
   font-weight: 900;
   box-shadow: none;
   background: color.$background-switcher;
+  cursor: not-allowed;
 }
 
 @mixin menuButton {
