--- a/src/components/auth/MultiStepsSignUpAbout/MultiStepsSignUpAbout.module.scss
+++ b/src/components/auth/MultiStepsSignUpAbout/MultiStepsSignUpAbout.module.scss
@@ -21,6 +21,8 @@
     align-items: center;
     gap: 30px;
     width: 100%;
+    height: 100%;
+    flex: 1 1 auto;
 
     &Header {
       display: flex;
@@ -35,6 +37,61 @@
 
     &Header > .stepFormHeaderTitle {
       @include boldTitle;
+    }
+  }
+
+  & .servicesLabel {
+    width: 100%;
+    max-width: 403px;
+    display: flex;
+    gap: 7px;
+    flex-direction: column;
+    @include selectLabel;
+  }
+
+  & .multiStepsFooter {
+    width: 100%;
+    height: 88px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-inline: 41px;
+    border-top: 1.5px solid color.$border-light;
+  }
+
+  & .multiStepsFooter {
+    width: 100%;
+    height: 88px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-inline: 41px;
+    border-top: 1.5px solid color.$border-light;
+  }
+
+  & .multiStepsNextButton {
+    @include Button;
+    position: static;
+    max-width: 145px;
+
+    &:disabled {
+      @include disabledButton;
+    }
+  }
+
+  & .multiStepsPreviousButton {
+    background: inherit;
+    width: 100%;
+    max-width: 132px;
+    min-height: 48px;
+    color: color.$background-support-primary;
+    font-weight: 600;
+    font-size: size.$font-size-md;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    &:disabled {
+      @include disabledButton;
     }
   }
 }
