--- a/src/styles/main/main.scss
+++ b/src/styles/main/main.scss
@@ -3,6 +3,22 @@
 
 body {
   background: color.$background-main-light;
+  overflow-x: auto;
+  &::-webkit-scrollbar {
+    width: 8px;
+    height: 5px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: color.$background-support-primary;
+    cursor: pointer;
+    border-radius: 14px;
+    height: 5px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: color.$border-neutral;
+  }
 }
 
 .main {
