--- a/src/components/auth/ServiceSelection/ServiceSelection.module.scss
+++ b/src/components/auth/ServiceSelection/ServiceSelection.module.scss
@@ -49,17 +49,7 @@
     @include selectLabel;
   }
 
-  & .multiStepsFooter {
-    width: 100%;
-    height: 88px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    padding-inline: 41px;
-    border-top: 1.5px solid color.$border-light;
-  }
-
-  & .multiStepsFooter {
+  & .selectionNav {
     width: 100%;
     height: 88px;
     display: flex;
@@ -69,7 +59,7 @@
     border-top: 1.5px solid color.$border-light;
   }
 
-  & .multiStepsNextButton {
+  & .nextButton {
     @include Button;
     position: static;
     max-width: 145px;
@@ -79,7 +69,7 @@
     }
   }
 
-  & .multiStepsPreviousButton {
+  & .previousButton {
     background: inherit;
     width: 100%;
     max-width: 132px;
