--- a/src/components/auth/ServiceSelection/ServiceSelection.module.scss
+++ b/src/components/auth/ServiceSelection/ServiceSelection.module.scss
@@ -22,9 +22,11 @@
     gap: 30px;
     width: 100%;
     height: 100%;
+    padding-block-start: 30px;
     flex: 1 1 auto;
 
     &Header {
+      width: 100%;
       display: flex;
       align-items: center;
       flex-flow: column nowrap;
@@ -49,7 +51,12 @@
     @include selectLabel;
   }
 
-  & .selectionNav {
+  & .multiStepsFooterContainer {
+    width: 100%;
+    flex: 1 1 auto;
+  }
+
+  & .multiStepsFooter {
     width: 100%;
     height: 88px;
     display: flex;
@@ -59,7 +66,7 @@
     border-top: 1.5px solid color.$border-light;
   }
 
-  & .nextButton {
+  & .multiStepsNextButton {
     @include Button;
     position: static;
     max-width: 145px;
@@ -69,7 +76,7 @@
     }
   }
 
-  & .previousButton {
+  & .multiStepsPreviousButton {
     background: inherit;
     width: 100%;
     max-width: 132px;
