Refactored component imports , added import 'React' .

--- a/src/components/auth/ServiceSelection/ServiceSelection.module.scss
+++ b/src/components/auth/ServiceSelection/ServiceSelection.module.scss
@@ -1,7 +1,7 @@
-@use "../../../styles/abstracts/breakpoints/breakpoints" as *;
-@use "../../../styles/abstracts/mixins/mixins" as *;
-@use "../../../styles/base/colors/colors" as color;
-@use "../../../styles/base/globals/globals" as size;
+@use '../../../styles/abstracts/breakpoints/breakpoints' as *;
+@use '../../../styles/abstracts/mixins/mixins' as *;
+@use '../../../styles/base/colors/colors' as color;
+@use '../../../styles/base/globals/globals' as size;
 
 .MultiStepsSignUpAbout {
   width: 100%;
