--- a/src/styles/abstracts/mixins/_mixins.scss
+++ b/src/styles/abstracts/mixins/_mixins.scss
@@ -1,5 +1,5 @@
-@use "../../base/colors/colors" as color;
-@use "../../base/globals/globals" as size;
+@use '../../base/colors/colors' as color;
+@use '../../base/globals/globals' as size;
 
 @mixin BoundingBox {
   width: 100%;
@@ -103,7 +103,7 @@
     color: color.$background-support-active;
   }
   &::before {
-    content: "";
+    content: '';
     position: absolute;
     bottom: -2px;
     left: 50%;
