--- a/src/styles/main/main.scss
+++ b/src/styles/main/main.scss
@@ -1,5 +1,5 @@
-@use "../../styles/base/reset/reset" as *;
-@use "../base/colors/colors" as color;
+@use '../../styles/base/reset/reset' as *;
+@use '../base/colors/colors' as color;
 
 body {
   background: color.$background-main-light;
