--- a/src/styles/pages/signIn.module.scss
+++ b/src/styles/pages/signIn.module.scss
@@ -1,4 +1,4 @@
-@use "../abstracts/breakpoints/breakpoints" as *;
+@use '../abstracts/breakpoints/breakpoints' as *;
 
 .signInContainer {
   width: 100%;
