--- a/src/components/ui/Nav/Nav.module.scss
+++ b/src/components/ui/Nav/Nav.module.scss
@@ -3,6 +3,7 @@
 @use '../../../styles/base/globals/globals' as size;
 
 .nav {
+  grid-column: span 12;
   width: 100%;
   &Container {
     display: flex;
