--- a/src/components/layout/Sidebar/Sidebar.module.scss
+++ b/src/components/layout/Sidebar/Sidebar.module.scss
@@ -19,8 +19,13 @@
   }
 
   &Logo {
+    max-width: 55px;
     padding-block-start: 40px;
     padding-inline-start: 24px;
+    transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0s;
+    &:hover {
+      transform: scale(1.05);
+    }
   }
 
   &LogoNavContainer {
@@ -57,7 +62,7 @@
     flex-direction: column;
     gap: 51px;
     padding-inline: 16px;
-    padding-block-end: 45px;
+    padding-block-end: 25px;
   }
 
   &LogoutBlock {
