--- a/src/styles/abstracts/mixins/_mixins.scss
+++ b/src/styles/abstracts/mixins/_mixins.scss
@@ -294,3 +294,22 @@
   border-radius: 14px;
   background: color.$background-main-light;
 }
+
+@mixin sidebar {
+  width: 100%;
+  height: 100vh;
+  max-width: 265px;
+  border-radius: 24px;
+  background: color.$color-white-primary;
+  box-shadow: color.$shadow-box-light;
+}
+
+@mixin listItemTitle {
+  line-height: 150%;
+  color: color.$color-black-deep;
+}
+
+@mixin listItemCode {
+  color: color.$color-gray-secondary;
+  font-size: size.$font-size-sm;
+}
