Created new Projects components as nav, sidebar, fixed other components, added icons

--- a/src/styles/pages/projects.module.scss
+++ b/src/styles/pages/projects.module.scss
@@ -1,5 +1,11 @@
-.projectsContainer {
+.projects {
   width: 100%;
   min-height: 100vh;
   grid-column: span 12;
+  display: flex;
+  gap: 30px;
+
+  &Container {
+    width: 100%;
+  }
 }
