--- a/src/styles/abstracts/mixins/_mixins.scss
+++ b/src/styles/abstracts/mixins/_mixins.scss
@@ -297,7 +297,7 @@
 
 @mixin sidebar {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   max-width: 265px;
   border-radius: 24px;
   background: color.$color-white-primary;
@@ -312,4 +312,13 @@
 @mixin listItemCode {
   color: color.$color-gray-secondary;
   font-size: size.$font-size-sm;
+  font-weight: 400;
+}
+
+@mixin tasksNavButton {
+  width: 48px;
+  height: 48px;
+  border-radius: 14px;
+  background: color.$color-white-primary;
+  box-shadow: color.$shadow-box-light;
 }
